css/styles.css
/*********************************
 * GENERAL
 *********************************/

* {
	font-family: "Lato", sans-serif;
}
html,
body {
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	overflow-y: hidden;
}
h2 {
	font-weight: bold;
	font-size: 16px;
	margin: 0;
	padding: 0;
}

/*********************************
 * SECTIONS
 *********************************/

/*header bar*/
header {
	background-color: #111;
    padding: 10px;
	width: 100%;
	height: 54px;
	-webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
	z-index: 1;
}
#hamburger {
    border: 1px solid #999;
    border-radius: 5px 5px 5px 5px;
    cursor: pointer;
    display: block;
    height: 24px;
    padding: 3px 4px 3px;
    position: relative;
    width: 25px;
    background: #222;
}
#hamburger div {
    background-color: #fff;
    border: 1px solid #eee;
    border-radius: 2px 2px 2px 2px;
    height: 2px;
    margin-top: 3px;
    width: 90%;
}

/*main map area*/
#content {
    width: 100%;
    height: 100%;
}

/*filter sidebar*/
nav div#filter {
	display: none;
    left: 0px;
    top: 54px;
    position: fixed;
    z-index: 1;
    width: 250px;
    height: 45px;
    overflow-x: hidden;
    overflow-y: hidden;
    background: #3e3c3d;
}
.filter {
	margin: 10px;
	width: calc(100% - 20px);
	height: 25px;
	font-size: 12px;
	-webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

/*list sidebar*/
nav div#list {
	display: none;
    left: 0px;
    top: 99px;
    position: fixed;
    z-index: 1;
    width: 250px;
    height: calc(100% - 99px);
    overflow-x: hidden;
    overflow-y: auto;
    background: #3e3c3d;
}
nav ul {
	list-style: none;
    margin: 0;
    width: 100%;
    padding: 0;
}
nav li {
	position: relative;
    font-weight: bold;
    font-size: 12px;
    color: #fff;
    border-bottom: 1px solid #222222;
    border-top: 1px solid #444444;
    padding: 15px;
}
nav li a {
    color: #fff;
    text-decoration: none;
}
.itemSelected {
	font-weight: bold;
	color: #0f0;
}

/*flexbox layout for images in the info window*/
.imgRow {
	height: 100px;
	width: 200px;

	/* from https://css-tricks.com/using-flexbox */
    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
    display: -ms-flexbox;      /* TWEENER - IE 10 */
    display: -webkit-flex;     /* NEW - Chrome */
    display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */

    /* based on https://gist.github.com/jayj/4012969 */
    -webkit-flex-wrap: wrap;
    -moz-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}
.imgCol {
	height: 100%;
	width: 50%;
	overflow: hidden;
}
.thumbnail {
	border: 1px solid #111;
	margin: 2px;
    width: calc(100% - 6px);
    height: calc(100% - 6px);
    object-fit: cover;
}

/*********************************
 * MEDIA QUERY
 *********************************/

@media screen and (max-width: 400px) {
	/*smaller sidebars when screen is smaller*/
	nav div#filter {
		width: 150px;
	}
	nav div#list {
		width: 150px;
	}
}

